<resources>
    <string name="app_name">Expense Manager App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">List</string>
    <string name="insert">Insert</string>
    <string name="add">Add</string>
    <string name="total">Total</string>
    <string name="value">Value</string>
    <string name="amount">Amount</string>
    <string name="enter_your_amount">enter your amount</string>
    <string name="note">Note</string>
    <string name="write_here">write here...</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="save">Save</string>
    <string name="amount_cannot_be_empty">Amount cannot be empty</string>
    <string name="note_cannot_be_empty">Note cannot be empty</string>
    <string name="_0_0">0.0</string>
</resources>